tests/invalid/function/local_fn_value_call_arg_self.facet
fn id<T>(x: unrestricted T) -> unrestricted T {
  x
}

fn main() -> unrestricted for<T> fn(unrestricted T) -> unrestricted T {
  let f: unrestricted for<T> fn(unrestricted T) -> unrestricted T = id in
  (f f)
}
